--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
                                     <h2 id="pathpearls">PathPearls</h2>
 <ul>
 <li>Source of practical pearls from the literature for anatomical &amp; clinical pathologists in practice or in preparation for board exams</li>
+<li>Disclaimer: the content of this website is for educational purposes only and does not constitute medical advice</li>
 </ul>
 <h3 id="author--creator-rachel-jug">Author &amp; Creator: Rachel Jug</h3>
 <ul>
